@@ -1,45 +1,107 @@
 package com.medval.controller;
 
-import com.medval.model.*;
-import com.medval.repository.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.medval.model.Appointment;
+import com.medval.model.Doctor;
+import com.medval.model.DoctorQualification;
+import com.medval.model.EmergencyRequest;
+import com.medval.model.MedicalRecord;
+import com.medval.model.Patient;
+import com.medval.model.Review;
+import com.medval.repository.AdminRepository;
+import com.medval.repository.AppointmentRepository;
+import com.medval.repository.DoctorQualificationRepository;
+import com.medval.repository.DoctorRepository;
+import com.medval.repository.DoctorSlotRepository;
+import com.medval.repository.EmergencyRequestRepository;
+import com.medval.repository.MedicalConditionRepository;
+import com.medval.repository.MedicalRecordRepository;
+import com.medval.repository.MedicationRepository;
+import com.medval.repository.PatientRepository;
+import com.medval.repository.ReviewRepository;
+import com.medval.repository.UserRepository;
+import com.medval.service.AdminService;
+import com.medval.service.EmergencyRequestService;
+import com.medval.service.NotificationService;
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/admin")
 public class AdminController {
 
-    @Autowired private AdminRepository adminRepository;
-    @Autowired private PatientRepository patientRepository;
-    @Autowired private DoctorRepository doctorRepository;
-    @Autowired private AppointmentRepository appointmentRepository;
-    @Autowired private MedicalRecordRepository medicalRecordRepository;
-    @Autowired private MedicalConditionRepository medicalConditionRepository;
-    @Autowired private MedicationRepository medicationRepository;
-    @Autowired private DoctorQualificationRepository qualificationRepository;
-    @Autowired private DoctorSlotRepository slotRepository;
-    @Autowired private ReviewRepository reviewRepository;
-    @Autowired private EmergencyRequestRepository emergencyRepository;
-    @Autowired private UserRepository userRepository;
-    @Autowired private com.medval.service.AdminService adminService;
-    @Autowired private com.medval.service.NotificationService notificationService;
+    private final AdminRepository adminRepository;
+    private final PatientRepository patientRepository;
+    private final DoctorRepository doctorRepository;
+    private final AppointmentRepository appointmentRepository;
+    private final MedicalRecordRepository medicalRecordRepository;
+    private final MedicalConditionRepository medicalConditionRepository;
+    private final MedicationRepository medicationRepository;
+    private final DoctorQualificationRepository qualificationRepository;
+    private final DoctorSlotRepository slotRepository;
+    private final ReviewRepository reviewRepository;
+    private final EmergencyRequestRepository emergencyRepository;
+    private final UserRepository userRepository;
+    private final AdminService adminService;
+    private final NotificationService notificationService;
+    private final EmergencyRequestService emergencyRequestService;
+
+    @Value("${frontend.url:http://localhost:5173}")
+    private String frontendUrl;
+
+    public AdminController(
+            AdminRepository adminRepository,
+            PatientRepository patientRepository,
+            DoctorRepository doctorRepository,
+            AppointmentRepository appointmentRepository,
+            MedicalRecordRepository medicalRecordRepository,
+            MedicalConditionRepository medicalConditionRepository,
+            MedicationRepository medicationRepository,
+            DoctorQualificationRepository qualificationRepository,
+            DoctorSlotRepository slotRepository,
+            ReviewRepository reviewRepository,
+            EmergencyRequestRepository emergencyRepository,
+            UserRepository userRepository,
+            AdminService adminService,
+            NotificationService notificationService,
+            EmergencyRequestService emergencyRequestService) {
+        this.adminRepository = adminRepository;
+        this.patientRepository = patientRepository;
+        this.doctorRepository = doctorRepository;
+        this.appointmentRepository = appointmentRepository;
+        this.medicalRecordRepository = medicalRecordRepository;
+        this.medicalConditionRepository = medicalConditionRepository;
+        this.medicationRepository = medicationRepository;
+        this.qualificationRepository = qualificationRepository;
+        this.slotRepository = slotRepository;
+        this.reviewRepository = reviewRepository;
+        this.emergencyRepository = emergencyRepository;
+        this.userRepository = userRepository;
+        this.adminService = adminService;
+        this.notificationService = notificationService;
+        this.emergencyRequestService = emergencyRequestService;
+    }
 
     @GetMapping("/profile/{userId}")
     public ResponseEntity<?> getAdminProfile(@PathVariable String userId) {
         return adminService.getAdminProfileByUserId(userId)
-            .map(ResponseEntity::ok)
-            .orElse(ResponseEntity.notFound().build());
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
-    
+
     @GetMapping("/profile/email/{email}")
     public ResponseEntity<?> getAdminProfileByEmail(@PathVariable String email) {
         return adminService.getAdminProfileByEmail(email)
-            .map(ResponseEntity::ok)
-            .orElse(ResponseEntity.notFound().build());
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/stats")
@@ -52,35 +114,17 @@ public class AdminController {
         stats.put("emergencyRequests", emergencyRepository.count());
         return ResponseEntity.ok(stats);
     }
-    
-    // Debug endpoint to list all users
-    @GetMapping("/debug/users")
-    public ResponseEntity<?> getAllUsers() {
-        List<Map<String, Object>> users = userRepository.findAll().stream()
-            .map(u -> {
-                Map<String, Object> map = new HashMap<>();
-                map.put("userId", u.getUserId());
-                map.put("email", u.getEmail());
-                map.put("role", u.getRole());
-                return map;
-            })
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(Map.of(
-            "totalUsers", users.size(),
-            "totalAdmins", adminRepository.count(),
-            "users", users
-        ));
-    }
 
     @GetMapping("/patients")
     public ResponseEntity<List<Map<String, Object>>> getAllPatients() {
-        return ResponseEntity.ok(patientRepository.findAll().stream().map(p -> {
+        List<Map<String, Object>> patients = patientRepository.findAll().stream().map(p -> {
             Map<String, Object> map = new HashMap<>();
+
             map.put("patientId", p.getPatientId());
             map.put("firstName", p.getFirstName());
             map.put("lastName", p.getLastName());
-            map.put("name", p.getFirstName() + " " + p.getLastName());
-            map.put("email", p.getUser().getEmail());
+            map.put("name", safeFullName(p.getFirstName(), p.getLastName()));
+            map.put("email", p.getUser() != null ? p.getUser().getEmail() : null);
             map.put("phone", p.getPhone());
             map.put("dateOfBirth", p.getDateOfBirth());
             map.put("gender", p.getGender());
@@ -89,55 +133,50 @@ public class AdminController {
             map.put("city", p.getCity());
             map.put("state", p.getState());
             map.put("dateJoined", p.getCreatedAt());
-            
-            // Count appointments
-            long totalAppointments = appointmentRepository.findByPatient(p).size();
-            long completedAppointments = appointmentRepository.findByPatient(p).stream()
-                .filter(a -> a.getStatus() == Appointment.AppointmentStatus.COMPLETED)
-                .count();
-            long upcomingAppointments = appointmentRepository.findByPatient(p).stream()
-                .filter(a -> a.getStatus() == Appointment.AppointmentStatus.APPROVED)
-                .count();
-            
-            map.put("totalAppointments", totalAppointments);
+
+            List<Appointment> appointments = appointmentRepository.findByPatient(p);
+            long completedAppointments = appointments.stream()
+                    .filter(a -> a.getStatus() == Appointment.AppointmentStatus.COMPLETED)
+                    .count();
+            long upcomingAppointments = appointments.stream()
+                    .filter(a -> a.getStatus() == Appointment.AppointmentStatus.APPROVED)
+                    .count();
+
+            map.put("totalAppointments", appointments.size());
             map.put("completedAppointments", completedAppointments);
             map.put("upcomingAppointments", upcomingAppointments);
-            
-            // Count medical records
-            long totalRecords = medicalRecordRepository.findByPatient(p).size();
-            map.put("totalRecords", totalRecords);
-            
-            // Count conditions
-            long totalConditions = medicalConditionRepository.findByPatient(p).size();
-            map.put("totalConditions", totalConditions);
-            
+            map.put("totalRecords", medicalRecordRepository.findByPatient(p).size());
+            map.put("totalConditions", medicalConditionRepository.findByPatient(p).size());
+
             return map;
-        }).collect(Collectors.toList()));
+        }).toList();
+
+        return ResponseEntity.ok(patients);
     }
 
     @GetMapping("/patients/{id}")
     public ResponseEntity<?> getPatientDetails(@PathVariable String id) {
         return patientRepository.findById(id)
-            .map(ResponseEntity::ok)
-            .orElse(ResponseEntity.notFound().build());
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/patients/{id}/appointments")
-    public ResponseEntity<List<Appointment>> getPatientAppointments(@PathVariable String id) {
+    public ResponseEntity<?> getPatientAppointments(@PathVariable String id) {
         return patientRepository.findById(id)
-            .map(p -> ResponseEntity.ok(appointmentRepository.findByPatient(p)))
-            .orElse(ResponseEntity.notFound().build());
+                .map(p -> ResponseEntity.ok(appointmentRepository.findByPatient(p)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/patients/{id}/medical-records")
-    public ResponseEntity<List<MedicalRecord>> getPatientMedicalRecords(@PathVariable String id) {
+    public ResponseEntity<?> getPatientMedicalRecords(@PathVariable String id) {
         return patientRepository.findById(id)
-            .map(p -> ResponseEntity.ok(medicalRecordRepository.findByPatient(p)))
-            .orElse(ResponseEntity.notFound().build());
+                .map(p -> ResponseEntity.ok(medicalRecordRepository.findByPatient(p)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/patients/{id}/health-records")
-    public ResponseEntity<Map<String, Object>> getPatientHealthRecords(@PathVariable String id) {
+    public ResponseEntity<?> getPatientHealthRecords(@PathVariable String id) {
         return patientRepository.findById(id).map(p -> {
             Map<String, Object> health = new HashMap<>();
             health.put("conditions", medicalConditionRepository.findByPatient(p));
@@ -148,13 +187,14 @@ public class AdminController {
 
     @GetMapping("/doctors")
     public ResponseEntity<List<Map<String, Object>>> getAllDoctors() {
-        return ResponseEntity.ok(doctorRepository.findAll().stream().map(d -> {
+        List<Map<String, Object>> doctors = doctorRepository.findAll().stream().map(d -> {
             Map<String, Object> map = new HashMap<>();
+
             map.put("professionalId", d.getProfessionalId());
             map.put("firstName", d.getFirstName());
             map.put("lastName", d.getLastName());
-            map.put("name", d.getFirstName() + " " + d.getLastName());
-            map.put("email", d.getUser().getEmail());
+            map.put("name", safeFullName(d.getFirstName(), d.getLastName()));
+            map.put("email", d.getUser() != null ? d.getUser().getEmail() : null);
             map.put("phone", d.getPhone());
             map.put("specialization", d.getSpecialization());
             map.put("qualification", d.getQualification());
@@ -164,71 +204,43 @@ public class AdminController {
             map.put("dateJoined", d.getCreatedAt());
             map.put("isVerified", d.isVerified());
             map.put("verified", d.isVerified());
+
             return map;
-        }).collect(Collectors.toList()));
+        }).toList();
+
+        return ResponseEntity.ok(doctors);
     }
 
     @GetMapping("/doctors/{id}")
     public ResponseEntity<?> getDoctorDetails(@PathVariable String id) {
         return doctorRepository.findById(id)
-            .map(ResponseEntity::ok)
-            .orElse(ResponseEntity.notFound().build());
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/doctors/{id}/appointments")
-    public ResponseEntity<List<Appointment>> getDoctorAppointments(@PathVariable String id) {
+    public ResponseEntity<?> getDoctorAppointments(@PathVariable String id) {
         return doctorRepository.findById(id)
-            .map(d -> ResponseEntity.ok(appointmentRepository.findByDoctor(d)))
-            .orElse(ResponseEntity.notFound().build());
+                .map(d -> ResponseEntity.ok(appointmentRepository.findByDoctor(d)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/doctors/{id}/qualifications")
-    public ResponseEntity<List<Map<String, Object>>> getDoctorQualifications(@PathVariable String id) {
+    public ResponseEntity<?> getDoctorQualifications(@PathVariable String id) {
         return doctorRepository.findById(id)
-            .map(d -> {
-                List<Map<String, Object>> qualifications = qualificationRepository.findByDoctor(d).stream()
-                    .map(q -> {
-                        Map<String, Object> map = new HashMap<>();
-                        map.put("qualificationId", q.getQualificationId());
-                        map.put("documentName", q.getDocumentName());
-                        map.put("documentType", q.getDocumentType());
-                        map.put("documentPath", q.getDocumentPath());
-                        map.put("uploadedAt", q.getUploadedAt());
-                        map.put("verificationStatus", q.getVerificationStatus());
-                        map.put("doctorId", d.getProfessionalId());
-                        map.put("doctorName", "Dr. " + d.getFirstName() + " " + d.getLastName());
-                        // Add verified status based on verification status
-                        map.put("isVerified", "APPROVED".equals(q.getVerificationStatus()));
-                        map.put("verified", "APPROVED".equals(q.getVerificationStatus()));
-                        return map;
-                    })
-                    .collect(Collectors.toList());
-                return ResponseEntity.ok(qualifications);
-            })
-            .orElse(ResponseEntity.notFound().build());
+                .map(d -> ResponseEntity.ok(
+                        qualificationRepository.findByDoctor(d).stream()
+                                .map(q -> qualificationToMap(q, d))
+                                .toList()))
+                .orElse(ResponseEntity.notFound().build());
     }
-    
+
     @GetMapping("/qualifications/all")
     public ResponseEntity<List<Map<String, Object>>> getAllQualifications() {
         List<Map<String, Object>> allQualifications = qualificationRepository.findAll().stream()
-            .map(q -> {
-                Map<String, Object> map = new HashMap<>();
-                map.put("qualificationId", q.getQualificationId());
-                map.put("documentName", q.getDocumentName());
-                map.put("documentType", q.getDocumentType());
-                map.put("documentPath", q.getDocumentPath());
-                map.put("uploadedAt", q.getUploadedAt());
-                map.put("verificationStatus", q.getVerificationStatus());
-                map.put("doctorId", q.getDoctor().getProfessionalId());
-                map.put("doctorName", "Dr. " + q.getDoctor().getFirstName() + " " + q.getDoctor().getLastName());
-                map.put("doctorEmail", q.getDoctor().getUser().getEmail());
-                map.put("specialization", q.getDoctor().getSpecialization());
-                // Add verified status based on verification status
-                map.put("isVerified", "APPROVED".equals(q.getVerificationStatus()));
-                map.put("verified", "APPROVED".equals(q.getVerificationStatus()));
-                return map;
-            })
-            .collect(Collectors.toList());
+                .map(q -> qualificationToMap(q, q.getDoctor()))
+                .toList();
+
         return ResponseEntity.ok(allQualifications);
     }
 
@@ -237,26 +249,32 @@ public class AdminController {
         return qualificationRepository.findById(qualId).map(q -> {
             q.setVerificationStatus("APPROVED");
             qualificationRepository.save(q);
-            
+
             Doctor doctor = q.getDoctor();
-            
-            // Check if ALL qualifications for this doctor are approved
+
             List<DoctorQualification> allQualifications = qualificationRepository.findByDoctor(doctor);
             boolean allApproved = allQualifications.stream()
-                .allMatch(qual -> "APPROVED".equals(qual.getVerificationStatus()));
-            
-            // Only set doctor as verified if ALL qualifications are approved
+                    .allMatch(qual -> "APPROVED".equals(qual.getVerificationStatus()));
+
             if (allApproved) {
                 doctor.setVerified(true);
+
+                if (doctor.getUser() != null) {
+                    doctor.getUser().setVerified(true);
+                    userRepository.save(doctor.getUser());
+                }
+
                 doctorRepository.save(doctor);
             }
-            
+
             Map<String, Object> response = new HashMap<>();
             response.put("qualificationId", q.getQualificationId());
             response.put("verificationStatus", q.getVerificationStatus());
             response.put("doctorVerified", doctor.isVerified());
-            response.put("message", allApproved ? "All qualifications approved. Doctor verified!" : "Qualification approved. Waiting for other qualifications.");
-            
+            response.put("message", allApproved
+                    ? "All qualifications approved. Doctor verified."
+                    : "Qualification approved. Waiting for other qualifications.");
+
             return ResponseEntity.ok(response);
         }).orElse(ResponseEntity.notFound().build());
     }
@@ -264,286 +282,233 @@ public class AdminController {
     @PutMapping("/doctors/{doctorId}/verify")
     public ResponseEntity<?> verifyDoctorByProfessionalId(@PathVariable String doctorId) {
         return doctorRepository.findById(doctorId).map(doctor -> {
-            // Verify all qualifications for this doctor
             List<DoctorQualification> qualifications = qualificationRepository.findByDoctor(doctor);
+
             for (DoctorQualification q : qualifications) {
                 q.setVerificationStatus("APPROVED");
                 qualificationRepository.save(q);
             }
-            // Set doctor as verified
+
             doctor.setVerified(true);
+
+            if (doctor.getUser() != null) {
+                doctor.getUser().setVerified(true);
+                userRepository.save(doctor.getUser());
+            }
+
             doctorRepository.save(doctor);
-            
+
             Map<String, Object> response = new HashMap<>();
-            response.put("message", "Doctor verified successfully");
+            response.put("message", "Doctor verified successfully.");
             response.put("doctorId", doctorId);
             response.put("isVerified", true);
+
             return ResponseEntity.ok(response);
         }).orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/doctors/{id}/slots")
-    public ResponseEntity<List<Map<String, Object>>> getDoctorSlots(@PathVariable String id) {
+    public ResponseEntity<?> getDoctorSlots(@PathVariable String id) {
         return doctorRepository.findById(id)
-            .map(d -> {
-                List<Map<String, Object>> slots = slotRepository.findByDoctor(d).stream()
-                    .map(slot -> {
-                        Map<String, Object> map = new HashMap<>();
-                        map.put("slotId", slot.getSlotId());
-                        map.put("doctorId", d.getProfessionalId());
-                        map.put("slotDate", slot.getSlotDate());
-                        map.put("slotTime", slot.getSlotTime());
-                        map.put("isAvailable", slot.getIsAvailable());
-                        map.put("isBooked", !slot.getIsAvailable());
-                        map.put("createdAt", slot.getCreatedAt());
-                        return map;
-                    })
-                    .collect(Collectors.toList());
-                return ResponseEntity.ok(slots);
-            })
-            .orElse(ResponseEntity.notFound().build());
+                .map(d -> ResponseEntity.ok(
+                        slotRepository.findByDoctor(d).stream().map(slot -> {
+                            Map<String, Object> map = new HashMap<>();
+                            map.put("slotId", slot.getSlotId());
+                            map.put("doctorId", d.getProfessionalId());
+                            map.put("slotDate", slot.getSlotDate());
+                            map.put("slotTime", slot.getSlotTime());
+                            map.put("isAvailable", slot.getIsAvailable());
+                            map.put("isBooked", !slot.getIsAvailable());
+                            map.put("createdAt", slot.getCreatedAt());
+                            return map;
+                        }).toList()))
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/doctors/{id}/reviews")
-    public ResponseEntity<List<Review>> getDoctorReviews(@PathVariable String id) {
+    public ResponseEntity<?> getDoctorReviews(@PathVariable String id) {
         return doctorRepository.findById(id)
-            .map(d -> ResponseEntity.ok(reviewRepository.findByAppointment_Doctor(d)))
-            .orElse(ResponseEntity.notFound().build());
+                .map(d -> ResponseEntity.ok(reviewRepository.findByAppointment_Doctor(d)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/appointments")
     public ResponseEntity<List<Map<String, Object>>> getAllAppointments() {
         List<Map<String, Object>> allAppointments = new ArrayList<>();
-        
-        // 1. Get regular appointments
+
         List<Map<String, Object>> appointments = appointmentRepository.findAll().stream().map(a -> {
             Map<String, Object> map = new HashMap<>();
+
             map.put("appointmentId", a.getAppointmentId());
             map.put("patientId", a.getPatient().getPatientId());
-            map.put("patientName", a.getPatient().getFirstName() + " " + a.getPatient().getLastName());
+            map.put("patientName", safeFullName(a.getPatient().getFirstName(), a.getPatient().getLastName()));
             map.put("doctorId", a.getDoctor().getProfessionalId());
-            map.put("doctorName", "Dr. " + a.getDoctor().getFirstName() + " " + a.getDoctor().getLastName());
+            map.put("doctorName", "Dr. " + safeFullName(a.getDoctor().getFirstName(), a.getDoctor().getLastName()));
             map.put("appointmentDateTime", a.getAppointmentDateTime());
             map.put("reason", a.getReason());
             map.put("status", a.getStatus().toString());
             map.put("consultationFee", a.getDoctor().getConsultationFee());
-            map.put("type", "REGULAR"); // Mark as regular appointment
-            
-            // Include review/feedback if exists
+            map.put("type", "REGULAR");
+
             Optional<Review> review = reviewRepository.findByAppointment(a);
-            if (review.isPresent()) {
-                map.put("feedback", review.get().getFeedback());
-                map.put("rating", review.get().getRating());
-            } else {
-                map.put("feedback", null);
-                map.put("rating", null);
-            }
-            
+            map.put("feedback", review.map(Review::getFeedback).orElse(null));
+            map.put("rating", review.map(Review::getRating).orElse(null));
+
             return map;
-        }).collect(Collectors.toList());
-        
-        // 2. Get emergency appointments that are completed (COMPLETED status OR APPROVED with past date)
-        java.time.LocalDateTime now = java.time.LocalDateTime.now();
+        }).toList();
+
+        LocalDateTime now = LocalDateTime.now();
+
         List<Map<String, Object>> emergencyAppointments = emergencyRepository.findAll().stream()
-            .filter(e -> e.getStatus() == com.medval.model.EmergencyRequest.EmergencyStatus.COMPLETED || 
-                        (e.getStatus() == com.medval.model.EmergencyRequest.EmergencyStatus.APPROVED && 
-                         e.getRequestDateTime().isBefore(now)))
-            .map(e -> {
-                Map<String, Object> map = new HashMap<>();
-                map.put("appointmentId", e.getRequestId().toString()); // Use requestId as appointmentId
-                map.put("patientId", e.getPatient().getPatientId());
-                map.put("patientName", e.getPatient().getFirstName() + " " + e.getPatient().getLastName());
-                map.put("doctorId", e.getDoctor().getProfessionalId());
-                map.put("doctorName", "Dr. " + e.getDoctor().getFirstName() + " " + e.getDoctor().getLastName());
-                map.put("appointmentDateTime", e.getRequestDateTime());
-                map.put("reason", e.getConditionDescription()); // Remove "EMERGENCY:" prefix
-                map.put("status", "COMPLETED");
-                map.put("consultationFee", e.getDoctor().getConsultationFee());
-                map.put("type", "EMERGENCY"); // Mark as emergency appointment
-                map.put("urgencyLevel", e.getUrgencyLevel().toString());
-                
-                // Include review/feedback if exists for emergency request
-                Optional<Review> review = reviewRepository.findByEmergencyRequest(e);
-                if (review.isPresent()) {
-                    map.put("feedback", review.get().getFeedback());
-                    map.put("rating", review.get().getRating());
-                } else {
-                    map.put("feedback", null);
-                    map.put("rating", null);
-                }
-                
-                return map;
-            }).collect(Collectors.toList());
-        
-        // Combine both lists
+                .filter(e -> e.getStatus() == EmergencyRequest.EmergencyStatus.COMPLETED ||
+                        (e.getStatus() == EmergencyRequest.EmergencyStatus.APPROVED &&
+                                e.getRequestDateTime().isBefore(now)))
+                .map(e -> {
+                    Map<String, Object> map = new HashMap<>();
+
+                    map.put("appointmentId", e.getRequestId().toString());
+                    map.put("patientId", e.getPatient().getPatientId());
+                    map.put("patientName", safeFullName(e.getPatient().getFirstName(), e.getPatient().getLastName()));
+                    map.put("doctorId", e.getDoctor().getProfessionalId());
+                    map.put("doctorName",
+                            "Dr. " + safeFullName(e.getDoctor().getFirstName(), e.getDoctor().getLastName()));
+                    map.put("appointmentDateTime", e.getRequestDateTime());
+                    map.put("reason", e.getConditionDescription());
+                    map.put("status", "COMPLETED");
+                    map.put("consultationFee", e.getDoctor().getConsultationFee());
+                    map.put("type", "EMERGENCY");
+                    map.put("urgencyLevel", e.getUrgencyLevel().toString());
+
+                    Optional<Review> review = reviewRepository.findByEmergencyRequest(e);
+                    map.put("feedback", review.map(Review::getFeedback).orElse(null));
+                    map.put("rating", review.map(Review::getRating).orElse(null));
+
+                    return map;
+                }).toList();
+
         allAppointments.addAll(appointments);
         allAppointments.addAll(emergencyAppointments);
-        
+
         return ResponseEntity.ok(allAppointments);
     }
 
     @GetMapping("/appointments/status/{status}")
-    public ResponseEntity<List<Appointment>> getAppointmentsByStatus(@PathVariable String status) {
-        return ResponseEntity.ok(appointmentRepository.findByStatus(Appointment.AppointmentStatus.valueOf(status.toUpperCase())));
-    }
+    public ResponseEntity<?> getAppointmentsByStatus(@PathVariable String status) {
+        try {
+            Appointment.AppointmentStatus appointmentStatus = Appointment.AppointmentStatus
+                    .valueOf(status.toUpperCase());
 
-    @Autowired private com.medval.service.EmergencyRequestService emergencyRequestService;
+            return ResponseEntity.ok(appointmentRepository.findByStatus(appointmentStatus));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Invalid appointment status."));
+        }
+    }
 
     @GetMapping("/emergency-requests")
     public ResponseEntity<List<Map<String, Object>>> getEmergencyRequests() {
-        return ResponseEntity.ok(emergencyRepository.findAll().stream().map(e -> {
+        List<Map<String, Object>> emergencyRequests = emergencyRepository.findAll().stream().map(e -> {
             Map<String, Object> map = new HashMap<>();
-            map.put("requestId", e.getRequestId());
-            
-            // Patient info
+
             Patient patient = e.getPatient();
+            Doctor doctor = e.getDoctor();
+
+            map.put("requestId", e.getRequestId());
             map.put("patientId", patient.getPatientId());
-            map.put("patientName", patient.getFirstName() + " " + patient.getLastName());
-            
-            // Add patient object with detailed info
+            map.put("patientName", safeFullName(patient.getFirstName(), patient.getLastName()));
+
             Map<String, Object> patientMap = new HashMap<>();
             patientMap.put("patientId", patient.getPatientId());
             patientMap.put("firstName", patient.getFirstName());
             patientMap.put("lastName", patient.getLastName());
             map.put("patient", patientMap);
-            
-            // Doctor info
-            map.put("doctorId", e.getDoctor().getProfessionalId());
-            map.put("doctorName", "Dr. " + e.getDoctor().getFirstName() + " " + e.getDoctor().getLastName());
+
+            map.put("doctorId", doctor.getProfessionalId());
+            map.put("doctorName", "Dr. " + safeFullName(doctor.getFirstName(), doctor.getLastName()));
             map.put("conditionDescription", e.getConditionDescription());
             map.put("urgencyLevel", e.getUrgencyLevel().toString());
             map.put("currentLocation", e.getCurrentLocation());
             map.put("requestDateTime", e.getRequestDateTime());
             map.put("status", e.getStatus().toString());
-            Double fee = e.getDoctor().getConsultationFee();
+
+            Double fee = doctor.getConsultationFee();
             map.put("consultationFee", fee != null ? fee : 500.0);
+
             return map;
-        }).collect(Collectors.toList()));
+        }).toList();
+
+        return ResponseEntity.ok(emergencyRequests);
     }
 
     @GetMapping("/prescriptions")
     public ResponseEntity<List<Map<String, Object>>> getAllPrescriptions() {
-        return ResponseEntity.ok(medicationRepository.findAll().stream().map(m -> {
+        List<Map<String, Object>> prescriptions = medicationRepository.findAll().stream().map(m -> {
             Map<String, Object> map = new HashMap<>();
+
             map.put("medicationId", m.getMedicationId());
-            map.put("patientName", m.getPatient().getFirstName() + " " + m.getPatient().getLastName());
+            map.put("patientName", safeFullName(m.getPatient().getFirstName(), m.getPatient().getLastName()));
             map.put("doctorName", m.getPrescribedBy());
             map.put("medicationName", m.getMedicationName());
             map.put("dosage", m.getDosage());
             map.put("startDate", m.getStartDate());
+
             return map;
-        }).collect(Collectors.toList()));
+        }).toList();
+
+        return ResponseEntity.ok(prescriptions);
     }
-    
-    // Notification endpoints
+
     @GetMapping("/notifications/{adminId}")
     public ResponseEntity<?> getNotifications(@PathVariable String adminId) {
         return ResponseEntity.ok(notificationService.getNotificationsByUserId(adminId));
     }
-    
+
     @GetMapping("/notifications/{adminId}/unread")
     public ResponseEntity<?> getUnreadNotifications(@PathVariable String adminId) {
         return ResponseEntity.ok(notificationService.getUnreadNotificationsByUserId(adminId));
     }
-    
+
     @GetMapping("/notifications/{adminId}/count")
     public ResponseEntity<?> getUnreadCount(@PathVariable String adminId) {
         return ResponseEntity.ok(Map.of("count", notificationService.getUnreadCount(adminId)));
     }
-    
+
     @PutMapping("/notifications/{notificationId}/read")
     public ResponseEntity<?> markAsRead(@PathVariable String notificationId) {
         notificationService.markNotificationAsRead(notificationId);
-        return ResponseEntity.ok(Map.of("message", "Notification marked as read"));
+        return ResponseEntity.ok(Map.of("message", "Notification marked as read."));
     }
-    
+
     @PutMapping("/notifications/{adminId}/read-all")
     public ResponseEntity<?> markAllAsRead(@PathVariable String adminId) {
         notificationService.markAllNotificationsAsRead(adminId);
-        return ResponseEntity.ok(Map.of("message", "All notifications marked as read"));
+        return ResponseEntity.ok(Map.of("message", "All notifications marked as read."));
     }
-    
+
     @PostMapping("/invite-doctor")
     public ResponseEntity<?> inviteDoctor(@RequestBody Map<String, String> payload) {
         String email = payload.get("email");
         String name = payload.get("name");
-        
+
         if (email == null || email.trim().isEmpty()) {
-            return ResponseEntity.badRequest().body(Map.of("message", "Email is required"));
+            return ResponseEntity.badRequest().body(Map.of("message", "Email is required."));
         }
-        
+
         try {
-            String subject = "You're Invited to Join MedVault - Your Trusted Healthcare Partner!";
-            String registrationLink = "http://localhost:5173/#doctor";
-            String doctorName = (name != null && !name.trim().isEmpty()) ? name : "Doctor";
-            
-            String htmlBody = "<!DOCTYPE html>" +
-                "<html>" +
-                "<head><meta charset='UTF-8'></head>" +
-                "<body style='margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif; background-color: #f8fafc;'>" +
-                "<div style='max-width: 600px; margin: 0 auto; background-color: #ffffff; border-radius: 16px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);'>" +
-                
-                // Header with gradient
-                "<div style='background: linear-gradient(135deg, #7c3aed 0%, #10b981 50%, #fbbf24 100%); padding: 40px 30px; text-align: left;'>" +
-                "<h1 style='color: #ffffff; margin: 0; font-size: 32px; font-weight: bold;'>🏥 MedVault</h1>" +
-                "<p style='color: rgba(255,255,255,0.95); margin: 10px 0 0 0; font-size: 16px;'>Your Trusted Healthcare Management Partner</p>" +
-                "</div>" +
-                
-                // Content - Left aligned
-                "<div style='padding: 40px 30px; text-align: left;'>" +
-                "<h2 style='color: #1e293b; margin: 0 0 20px 0; font-size: 26px;'>Hello " + doctorName + "! 👋</h2>" +
-                "<p style='color: #475569; font-size: 16px; line-height: 1.8; margin: 0 0 20px 0;'>" +
-                "We are <strong>thrilled</strong> to invite you to join <strong style='color: #7c3aed;'>MedVault</strong> - India's most trusted and secure healthcare management platform! 🎉" +
-                "</p>" +
-                "<p style='color: #475569; font-size: 16px; line-height: 1.8; margin: 0 0 25px 0;'>" +
-                "Thousands of medical professionals across the country trust MedVault to streamline their practice and deliver exceptional patient care." +
-                "</p>" +
-                
-                "<p style='color: #1e293b; font-size: 18px; font-weight: 700; margin: 25px 0 15px 0;'>✨ As a MedVault practitioner, you will be able to:</p>" +
-                
-                "<div style='background: linear-gradient(135deg, #f8fafc 0%, #eef2ff 100%); border-radius: 16px; padding: 25px; margin: 0 0 25px 0; border-left: 4px solid #7c3aed;'>" +
-                "<div style='margin-bottom: 14px; display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>📅</span> <span style='color: #334155; font-size: 15px;'>Manage your appointments efficiently</span></div>" +
-                "<div style='margin-bottom: 14px; display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>🔒</span> <span style='color: #334155; font-size: 15px;'>Access patient medical records (with consent)</span></div>" +
-                "<div style='margin-bottom: 14px; display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>🗓️</span> <span style='color: #334155; font-size: 15px;'>Set and customize your availability</span></div>" +
-                "<div style='margin-bottom: 14px; display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>💰</span> <span style='color: #334155; font-size: 15px;'>Specify and update your consultation fees</span></div>" +
-                "<div style='margin-bottom: 14px; display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>💬</span> <span style='color: #334155; font-size: 15px;'>Communicate with patients through secure messaging</span></div>" +
-                "<div style='margin-bottom: 14px; display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>👤</span> <span style='color: #334155; font-size: 15px;'>Maintain and enhance your professional profile</span></div>" +
-                "<div style='margin-bottom: 14px; display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>⭐</span> <span style='color: #334155; font-size: 15px;'>View and monitor patient feedback and ratings</span></div>" +
-                "<div style='display: flex; align-items: center;'><span style='font-size: 20px; margin-right: 12px;'>📊</span> <span style='color: #334155; font-size: 15px;'>Track your earnings and payment settlements</span></div>" +
-                "</div>" +
-                
-                "<p style='color: #475569; font-size: 16px; line-height: 1.8; margin: 0 0 25px 0;'>" +
-                "Ready to transform your practice? Click the button below to complete your registration and join our growing community of healthcare professionals! 🚀" +
-                "</p>" +
-                
-                // CTA Button - Left aligned
-                "<div style='text-align: left; margin: 30px 0;'>" +
-                "<a href='" + registrationLink + "' style='display: inline-block; background: linear-gradient(135deg, #7c3aed 0%, #6366f1 100%); color: #ffffff; padding: 18px 45px; text-decoration: none; border-radius: 12px; font-size: 18px; font-weight: bold; box-shadow: 0 4px 14px rgba(99, 102, 241, 0.4);'>🎯 Register Now →</a>" +
-                "</div>" +
-                
-                "<p style='color: #94a3b8; font-size: 13px; margin: 25px 0 0 0;'>If the button doesn't work, copy and paste this link into your browser:</p>" +
-                "<p style='color: #7c3aed; font-size: 13px; word-break: break-all;'>" + registrationLink + "</p>" +
-                "</div>" +
-                
-                // Footer
-                "<div style='background-color: #f1f5f9; padding: 25px 30px; text-align: left; border-top: 1px solid #e2e8f0;'>" +
-                "<p style='color: #64748b; font-size: 13px; margin: 0 0 8px 0;'>💌 This is an automated invitation from MedVault.</p>" +
-                "<p style='color: #94a3b8; font-size: 12px; margin: 0;'>© 2025 MedVault Healthcare Solutions. All rights reserved.</p>" +
-                "</div>" +
-                
-                "</div>" +
-                "</body>" +
-                "</html>";
-            
-            adminService.sendDoctorInvitation(email, subject, htmlBody);
-            
+            String doctorName = (name != null && !name.trim().isEmpty()) ? name.trim() : "Doctor";
+            String registrationLink = buildFrontendUrl("#doctor");
+
+            String subject = "You're invited to join MedVault";
+            String htmlBody = buildDoctorInvitationEmail(doctorName, registrationLink);
+
+            adminService.sendDoctorInvitation(email.trim(), subject, htmlBody);
+
             return ResponseEntity.ok(Map.of(
-                "message", "Invitation sent successfully to " + email,
-                "email", email
-            ));
+                    "message", "Invitation sent successfully.",
+                    "email", email.trim()));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.status(500).body(Map.of("message", "Failed to send invitation: " + e.getMessage()));
+            System.err.println("Doctor invitation failed for " + email + ": " + e.getMessage());
+            return ResponseEntity.internalServerError()
+                    .body(Map.of("message", "Failed to send invitation. Please try again later."));
         }
     }
 
@@ -555,28 +520,137 @@ public class AdminController {
         } catch (RuntimeException e) {
             return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.status(500).body(Map.of("message", "Failed to send emergency reminder: " + e.getMessage()));
+            System.err.println("Emergency reminder failed for request " + requestId + ": " + e.getMessage());
+            return ResponseEntity.internalServerError()
+                    .body(Map.of("message", "Failed to send emergency reminder. Please try again later."));
         }
     }
-    
-    /**
-     * Sync verification status from healthcare_professionals to users table
-     * This endpoint can be called manually or scheduled to run periodically
-     */
+
     @PostMapping("/sync-verification")
     public ResponseEntity<?> syncDoctorVerification() {
         try {
             int updatedCount = adminService.syncDoctorVerificationStatus();
+
             return ResponseEntity.ok(Map.of(
-                "message", "Verification status synced successfully",
-                "updatedCount", updatedCount
-            ));
+                    "message", "Verification status synced successfully.",
+                    "updatedCount", updatedCount));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.status(500).body(Map.of(
-                "message", "Failed to sync verification status: " + e.getMessage()
-            ));
+            System.err.println("Verification sync failed: " + e.getMessage());
+            return ResponseEntity.internalServerError()
+                    .body(Map.of("message", "Failed to sync verification status. Please try again later."));
         }
+    }
+
+    private Map<String, Object> qualificationToMap(DoctorQualification q, Doctor doctor) {
+        Map<String, Object> map = new HashMap<>();
+
+        map.put("qualificationId", q.getQualificationId());
+        map.put("documentName", q.getDocumentName());
+        map.put("documentType", q.getDocumentType());
+        map.put("documentPath", q.getDocumentPath());
+        map.put("uploadedAt", q.getUploadedAt());
+        map.put("verificationStatus", q.getVerificationStatus());
+
+        if (doctor != null) {
+            map.put("doctorId", doctor.getProfessionalId());
+            map.put("doctorName", "Dr. " + safeFullName(doctor.getFirstName(), doctor.getLastName()));
+            map.put("doctorEmail", doctor.getUser() != null ? doctor.getUser().getEmail() : null);
+            map.put("specialization", doctor.getSpecialization());
+        }
+
+        boolean isApproved = "APPROVED".equals(q.getVerificationStatus());
+        map.put("isVerified", isApproved);
+        map.put("verified", isApproved);
+
+        return map;
+    }
+
+    private String buildFrontendUrl(String pathOrHash) {
+        String baseUrl = frontendUrl == null || frontendUrl.isBlank()
+                ? "http://localhost:5173"
+                : frontendUrl.split(",")[0].trim();
+
+        if (pathOrHash == null || pathOrHash.isBlank()) {
+            return baseUrl;
+        }
+
+        if (pathOrHash.startsWith("#")) {
+            return baseUrl + "/" + pathOrHash;
+        }
+
+        if (pathOrHash.startsWith("/")) {
+            return baseUrl + pathOrHash;
+        }
+
+        return baseUrl + "/" + pathOrHash;
+    }
+
+    private String buildDoctorInvitationEmail(String doctorName, String registrationLink) {
+        String safeDoctorName = escapeHtml(doctorName);
+        String safeLink = escapeHtml(registrationLink);
+
+        return "<!DOCTYPE html>" +
+                "<html>" +
+                "<head><meta charset='UTF-8'></head>" +
+                "<body style='margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;background-color:#f8fafc;'>" +
+                "<div style='max-width:600px;margin:24px auto;background:#ffffff;border-radius:16px;overflow:hidden;box-shadow:0 4px 16px rgba(15,23,42,0.12);'>"
+                +
+                "<div style='background:linear-gradient(135deg,#7c3aed 0%,#10b981 50%,#fbbf24 100%);padding:40px 30px;color:#ffffff;'>"
+                +
+                "<h1 style='margin:0;font-size:32px;font-weight:bold;'>MedVault</h1>" +
+                "<p style='margin:10px 0 0;font-size:16px;opacity:0.95;'>Your trusted healthcare management partner</p>"
+                +
+                "</div>" +
+                "<div style='padding:40px 30px;'>" +
+                "<h2 style='color:#1e293b;margin:0 0 20px;font-size:26px;'>Hello " + safeDoctorName + "!</h2>" +
+                "<p style='color:#475569;font-size:16px;line-height:1.8;margin:0 0 20px;'>" +
+                "You are invited to join <strong style='color:#7c3aed;'>MedVault</strong>, a secure healthcare management platform for doctors and patients."
+                +
+                "</p>" +
+                "<p style='color:#1e293b;font-size:18px;font-weight:700;margin:25px 0 15px;'>As a MedVault practitioner, you can:</p>"
+                +
+                "<ul style='color:#334155;font-size:15px;line-height:1.9;background:#f8fafc;border-left:4px solid #7c3aed;border-radius:12px;padding:20px 24px;margin:0 0 25px;'>"
+                +
+                "<li>Manage appointments efficiently</li>" +
+                "<li>Access patient medical records with consent</li>" +
+                "<li>Set availability and consultation fees</li>" +
+                "<li>Maintain your professional profile</li>" +
+                "<li>Track patient feedback and ratings</li>" +
+                "</ul>" +
+                "<div style='text-align:left;margin:30px 0;'>" +
+                "<a href='" + safeLink
+                + "' style='display:inline-block;background:#7c3aed;color:#ffffff;padding:16px 36px;text-decoration:none;border-radius:12px;font-size:16px;font-weight:bold;'>Register Now</a>"
+                +
+                "</div>" +
+                "<p style='color:#94a3b8;font-size:13px;margin:25px 0 0;'>If the button does not work, copy this link:</p>"
+                +
+                "<p style='color:#7c3aed;font-size:13px;word-break:break-all;'>" + safeLink + "</p>" +
+                "</div>" +
+                "<div style='background:#f1f5f9;padding:24px 30px;color:#64748b;font-size:12px;'>" +
+                "This is an automated invitation from MedVault.<br>" +
+                "© 2026 MedVault. All rights reserved." +
+                "</div>" +
+                "</div>" +
+                "</body>" +
+                "</html>";
+    }
+
+    private String safeFullName(String firstName, String lastName) {
+        String first = firstName == null ? "" : firstName.trim();
+        String last = lastName == null ? "" : lastName.trim();
+        return (first + " " + last).trim();
+    }
+
+    private String escapeHtml(String value) {
+        if (value == null) {
+            return "";
+        }
+
+        return value
+                .replace("&", "&amp;")
+                .replace("<", "&lt;")
+                .replace(">", "&gt;")
+                .replace("\"", "&quot;")
+                .replace("'", "&#39;");
     }
 }
